# cabal-template

./: .editorconfig  .envrc  .gitignore  LICENSE  README.md  cabal-template.cabal  default.nix  fourmolu.yaml  hie.yaml  shell.nix
nix/: sources.json
nix/cabal-template.nix.d/: default.nix
nix/cabal-template.nix.d/.plan.nix/: cabal-template.nix
nix/fourmolu.nix.d/: default.nix
src/: Lib.hs
test/: Spec.hs
